--- a/resources.qrc
+++ b/resources.qrc
@@ -23,5 +23,8 @@
         <file alias="img_2.png">image/img_2.png</file>
         <file alias="author_1.png">image/author_1.png</file>
         <file alias="img_1.png">image/img_1.png</file>
+        <file alias="user.png">image/user.png</file>
+        <file alias="heart.svg">image/heart.svg</file>
+        <file alias="notification.svg">image/notification.svg</file>
     </qresource>
 </RCC>
