--- a/resources.qrc
+++ b/resources.qrc
@@ -27,4 +27,7 @@
         <file alias="heart.svg">image/heart.svg</file>
         <file alias="notification.svg">image/notification.svg</file>
     </qresource>
+    <qresource prefix="/icon">
+        <file alias="ok.svg">image/icon/ok.svg</file>
+    </qresource>
 </RCC>
