--- a/qml.qrc
+++ b/qml.qrc
@@ -14,5 +14,8 @@
         <file>CustomChart.qml</file>
         <file>CustomCheckBox.qml</file>
         <file>HeaderHomePage.qml</file>
+        <file>CircleProgressBar.qml</file>
+        <file>CustomButton.qml</file>
+        <file>CustomComboBox.qml</file>
     </qresource>
 </RCC>
